--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,16 @@
             <artifactId>javafx-fxml</artifactId>
             <version>15.0.1</version>
         </dependency>
-        <!--svg-lib-->
-        <dependency>
-            <groupId>de.codecentric.centerdevice</groupId>
-            <artifactId>javafxsvg</artifactId>
-            <version>1.3.0</version>
-        </dependency>
 <!--        ikonli-lineawesome-pack-->
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-core</artifactId>
+            <version>12.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
-            <version>11.3.5</version>
+            <version>12.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
