work done on the design. start working on the functional side

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>com.drronidz.App</mainClass>
+                    <mainClass>com.drronidz.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
